# cs77-ass2

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  render_all.sh  render_all_with_ref.sh  view-ref-linux  view-ref-osx
doc/html/: annotated.html  apps_8h.html  camera_8cpp.html  camera_8h.html  classes.html  common_8h.html  debug_8cpp.html  debug_8h.html  draw_8cpp.html  draw_8h.html  files.html  frame_8h.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_0x78.html  functions_0x79.html  functions_0x7a.html  functions_func.html  functions_vars.html  geom_8cpp.html  (+212 more)
src/igl/: primitive.cpp  primitive.h  serialize.cpp  shape.cpp  shape.h  tesselate.cpp
